2002-12-26  Rodrigo Moya <rodrigo@gnome-db.org>

	* providers/mdb/gda-mdb-provider.c (gda_mdb_provider_get_database,
	gda_mdb_provider_change_database, gda_mdb_provider_create_database,
	gda_mdb_provider_drop_database): added missing methods.
	(get_mdb_tables): included all missing schema information.

	* libgda/gda-table.c: fixed typo in PARENT_TYPE #define (now really
	subclassing GdaDataModelArray, and not GdaDataModel.

2002-12-23  Rodrigo Moya <rodrigo@gnome-db.org>

	* providers/xbase/gda-xbase-provider.c
	(gda_xbase_provider_open_connection): added the connection to the hash
	table of databases, and added code to read all .mdb files in the
	specified directory.

2002-12-22  Rodrigo Moya <rodrigo@gnome-db.org>

	* testing/client.c (open_connection): added missing schemas.

2002-12-20  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-data-model-hash.c (gda_data_model_hash_append_row,
	gda_data_model_hash_insert_row): emit more fine-grained modification
	signals.

2002-12-19  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-row.[ch] (gda_row_get_number, gda_row_set_number): new
	functions.

	* libgda/gda-data-model.[ch]: added "row_inserted", "row_removed" and
	"row_updated" signals.
	(gda_data_model_row_inserted):
	(gda_data_model_row_updated):
	(gda_data_model_row_removed): new functions to emit the new signals.

	* libgda/gda-data-model-array.c (gda_data_model_array_append_row,
	gda_data_model_remove_row): emit more fine-grained modification
	signals.

	* libgda/gda-data-model-list.c (gda_data_model_list_init): connect to
	signals on the internal data model.
	(proxy_changed_cb, proxy_row_inserted_cb, proxy_row_updated_cb,
	proxy_row_removed_cb): callbacks for proxying the internal data
	model's signals.

2002-12-18  Vivien Malerba <malerba@gnome-db.org>

	* providers/postgres/libmain.c: added a connection parameter to specify a "search_path" (which is a list